--- a/src/styles/blocks/_search-field.sass
+++ b/src/styles/blocks/_search-field.sass
@@ -1,4 +1,5 @@
 .search-field
+
     margin: 0 auto
     flex-direction: column
     align-items: center
@@ -22,6 +23,7 @@
         text-align: center
         padding-top: 310px
     &__input
+        color: $dark-blue
         height: 70px
         width: 580px
         border-radius: 5px
