--- a/src/styles/blocks/_search-page.sass
+++ b/src/styles/blocks/_search-page.sass
@@ -18,6 +18,7 @@
         margin: 0 auto
         height: 100%
         width: 300px
+        text-align: center
         &-image
         &-title
             margin-top: 15px
