--- a/src/styles/blocks/_book-item-popup.sass
+++ b/src/styles/blocks/_book-item-popup.sass
@@ -1,31 +1,13 @@
-// .rel
-//     position: relative
-
 .book-item-popup
     top: 50px
     left: 0
-    // // display: block
     position: absolute
-    // width: 100%
-    // height: 100%
-
     z-index: 3
-    // display: none
-    // &_active
-    //     top: 0
-    //     left: 0
-    //     // display: block
-    //     position: fixed
-    //     width: 100%
-    //     height: 100%
-    //     background: rgba(222,231,241,0.75)
-    //     z-index: 2
     &__overlay
         display: none
         background: rgba(222,231,241,0.75)
         top: 0
         left: 0
-        // display: block
         position: fixed
         width: 100%
         height: 100%
@@ -37,14 +19,11 @@
         top: 0
         left: 50%
         transform: translate(-50%)
-        // min-width: 714px
-        // min-height: 500px
         padding: 38px
         background: white
         border-radius: 5px
         box-shadow: 0 0 10px rgba(12,54,105,0.2)
         transition: all 0.3s ease
-        // z-index: 3
     &__image
         height: 400px
         width: 300px
@@ -60,15 +39,14 @@
         margin-bottom: 10px
         color: $dark-blue
     &__author
-        // margin-bottom: 10px
         font-size: 20px
         color: $pale-blue
     &__descr
         font-size: 16px
         color: $pale-blue
-        // margin-bottom: 20px
         font-weight: 500
         line-height: 1.5em
+        margin-bottom: 10px
     &__rating
         margin-bottom: 7px
         margin-top: 10px
