--- a/src/styles/blocks/_buttons.sass
+++ b/src/styles/blocks/_buttons.sass
@@ -5,37 +5,23 @@
     border-radius: 5px
     padding: 20px
     color: white
-    // transition: all 0.5s ease
     &:hover
         transition: none
         cursor: pointer
         background: $green
     &:active
-        // background: $light-green
-        // // transition: all 0.5s ease
-        // transition: all 0.5s ease
-        // margin-top: 15px
-        
-
     &_example
         margin-top: 200px
-
-
     &_offer
         width: 130px
         height: 70px
         box-shadow: 0 6px 9px rgba(0,0,0,0.2)
-        // transition: all 0.2s ease
-        &:hover
-            // box-shadow: 0 0px 15px #76e941
-            // background: $green
     &_top
         background: none
         box-shadow: none
         height: 36px
         width: 20px
         padding: 0
-        // display: none
         position: absolute
         top: 2px
         right: 15px
@@ -45,7 +31,7 @@
         &:hover
             box-shadow: none
             background: none
-        
+
         i
             font-size: 16px
             color: $light-grey
@@ -56,8 +42,6 @@
         top: 18px
         right: 18px
         padding: 0
-        // height: 25px
-        // width: 25px
         svg
             height: 18px
             width: 18px !important
@@ -65,16 +49,14 @@
         &:hover
             background: none
     &_popup
-        // background: $green-gradient-reverse
         background: $green-gradient-higher
-        // display: inline-block
         font-size: 20px
         padding: 10px 15px
-        display: inline-flex
+        display: flex
         align-items: center
+        width: 93px
         svg
             margin-left: 2px
             margin-top: 2px
             height: 14px
             width: 14px !important
-
